--- a/main.html
+++ b/main.html
@@ -7,6 +7,15 @@
 </head>
 
 <body>
+	<div style="margin-bottom: 20px;">
+    <h1 id="f1">Flowers photos</h1>
+    <p>Flowers are the reproductive structures of flowering plants. They are often colorful and fragrant, attracting pollinators like bees and butterflies. Flowers come in a wide variety of shapes, sizes, and colors, making them a beautiful and diverse part of the natural world.</p>
+  </div>
+
+  <div>
+    <h1 id="f2">Roses pictures</h1>
+    <p>Roses are a classic and beloved flower known for their beauty and fragrance. They are often associated with love and romance. Roses come in various colors, each with its own symbolic meaning. Red roses represent love, while yellow roses symbolize friendship. They are commonly used in bouquets and gardens.</p>
+  </div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
